Cambio de fórmula

--- a/Ejemplo1_Factorial.tex
+++ b/Ejemplo1_Factorial.tex
@@ -11,6 +11,7 @@ El factorial de un entero positivo n se define cómo: 5! = $\prod_{i=1}^{5}$ i =
 
 %parrafo 2
 
+$\hat{R}(\hat{f}, \hat{D}_m^n ) = \frac{1}{|\hat{D}_m^n|} \sum_{i:(X_i, Y_i) \in \hat{D}_m^n }^{} (Y_i - \hat{f}, \hat{D}_m^n) $
 
 \subsection{Definición}
 
