Cambio desde la original

--- a/Ejemplo1_Factorial.tex
+++ b/Ejemplo1_Factorial.tex
@@ -27,9 +27,16 @@ $\hat{R}(\hat{f}, \hat{D}_m^n ) = \frac{1}{|\hat{D}_m^n|} \sum_{i:(X_i, Y_i) \in
 Aquí podemos ver una implementación recursiva:
 
 \begin{verbatim}
-   factorial n | n == 0 = 1
-               | n >  0 = n * factorial (n-1)
+	factorial n | n == 0 = 1
+	| n >  0 = n * factorial (n-1)
 \end{verbatim}
+
+\section{cambio 1}
+
+
+\section{cambio 2}
+
+
 
 
 \end{document}
